[metadata]
name = cached_spliceai
version = attr: cached_spliceai.__version__
description = 
long_description = file: README.md
long_description_content_type = text/markdown
author = SamuelNicaise
url = https://github.com/SamuelNicaise/cached_spliceai.git

license_files = LICENSE
keywords = bioinformatics, genetics, spliceai, cache, redis
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Affero General Public License v3

[options.package_data]
* = *.yaml, *.json


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.10
install_requires =
    pysam
    spliceai

[options.extras_require]
dev =
    black
cpu =
    tensorflow>=1.2.0
gpu =
    tensorflow-gpu>=1.2.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cached_spliceai = cached_spliceai.__main__:main
